# documentation_portal

./: .gitignore  README.md  build.py  config.toml  pyproject.toml
layouts/_default/: baseof.html  index.html  single.html
layouts/document/: single.html
layouts/partials/: header.html
static/css/: base.css  document.css  index.css  reset.css
